提交  公用字段

--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/cvyear_2019.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/cvyear_2019.html
@@ -35,7 +35,7 @@
                 </el-col>
                 <el-col class="el-row-h40" :offset="1" :span="13">请到<b style="color: #175CE9;">基本信息</b>中配置相关内容，本次会议的会议编号为：<b style="color: #175CE9;">1</b></el-col>
             </el-row>
-            <el-row class="el-row-h70">
+            <!-- <el-row class="el-row-h70">
                 <el-col :span="24">
                     <el-form-item prop="meetingTitle" label="会议标题" style="margin:0;">
                         <el-input
@@ -46,7 +46,7 @@
                         </el-input>
                     </el-form-item>
                 </el-col>
-            </el-row>
+            </el-row> -->
             <el-row class="el-row-h220">
                 <el-col :span="12">
                     <el-form-item label="封面图" prop="meetingImg" label-width="30%" style="margin:0;">
