--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/special_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/special_list.html
@@ -39,7 +39,11 @@
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" stripe>
-                    <el-table-column prop="subjectTitle" label="专题名称"></el-table-column>
+                    <el-table-column prop="" label="专题名称">
+                        <template slot-scope="scope">
+                            <div class="subject_title" v-text="scope.row.subjectTitle" @click="openThisPage(scope.row.subjectId)"></div>
+                        </template>
+                    </el-table-column>
                     <el-table-column prop="subjectAppPic" label="专题封面图" width="180">
                         <template v-if="scope.row.subjectAppPic !== ''" slot-scope="scope">
                             <img style="width:160px;height:100px;" :src="scope.row.subjectAppPic">
@@ -264,6 +268,12 @@
 <script type="text/javascript" src="${request.contextPath}/statics/js/modules/content/special_list.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
 <style>
+.subject_title{
+    cursor: pointer;
+}
+.subject_title:hover{
+    color: #175CE9;
+}
 .avatar-uploader{
     width:720px;
     height: 200px;
