--- a/webapps/ROOT/WEB-INF/classes/templates/modules/signup/signup_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/signup/signup_list.html
@@ -559,7 +559,7 @@
                     </template>
                 </el-table-column>
             </el-table>
-            <!-- <div class="cv_page_zone">
+            <div class="cv_page_zone">
                 <el-pagination
                     @current-change="handleCurrentChange4"
                     :current-page="pagination4.currPage"
@@ -567,7 +567,7 @@
                     layout="total, prev, pager, next, jumper"
                     :total="pagination4.totalCount">
                 </el-pagination>
-            </div> -->
+            </div>
         </el-dialog>
         <!----------------封面图库弹出层结束-------------------->
 
