--- a/webapps/ROOT/WEB-INF/classes/templates/modules/signup/signup_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/signup/signup_list.html
@@ -97,10 +97,10 @@
         <!------------------创建/编辑报名信息开始---------------------------->
        <div v-show="showAddorEditPage">
             <div class="cv_content_square">
-                <el-form :model="signupForm" ref="signupForm"  :rules="signupFormRules" status-icon class="demo-ruleForm" label-width="20%" label-position="right">
+                <el-form :model="signupForm" ref="signupForm"  :rules="signupFormRules" status-icon class="demo-ruleForm" label-width="15%" label-position="right">
                     
                     <el-row class="el-row-h70" style="margin-top: 60px">
-                        <el-col :span="18">
+                        <el-col :span="24">
                             <el-form-item prop="signUpTitle" label="报名名称" style="margin:0;">
                                 <el-input
                                 clearable
@@ -115,26 +115,25 @@
 
                     <div class="sparate_line">关联会议详情</div>
                     <el-row class="el-row-h70">
-                        <el-col :span="18">
+                        <el-col :span="24">
                             <el-form-item label="会议类型" prop="signUpMeetingType" style="margin:0;">
                                 <template slot-scope="scope">
                                     <el-radio-group @change="changeLabel" :disabled="isToEdit" v-model="signupForm.signUpMeetingType" >
                                         <el-radio label="1">通用会议</el-radio>
                                         <el-radio label="0">定制会议</el-radio>
-
                                     </el-radio-group>
                                 </template>
                             </el-form-item>
                         </el-col>
                     </el-row>
                     <el-row class="el-row-h70">
-                        <el-col :span="18">
+                        <el-col :span="24">
                             <el-form-item prop="signUpMeetingId" label="关联会议详情ID" style="margin:0;">
                                 <div v-if="signupForm.signUpMeetingId == ''">
                                     <el-button size="medium" type="primary" icon="el-icon-plus" :disabled="isBindMeeting" @click="bindMeeting()">绑定会议</el-button>
                                 </div>
                                 <div v-if="signupForm.signUpMeetingId !== ''">
-                                    <el-col :span="18">
+                                    <el-col :span="21">
                                         <el-input
                                         clearable
                                         type="text"
@@ -142,7 +141,7 @@
                                         :disabled="true"
                                         auto-complete="on">
                                     </el-col>
-                                    <el-col :span="5" :offset="1">
+                                    <el-col :span="2" :offset="1">
                                         <el-button size="medium" type="primary" @click="bindMeeting()">修改</el-button>
                                     </el-col>
                                 </div>
@@ -152,9 +151,9 @@
                     </el-row>
 
                     <div v-if="signupForm.signUpMeetingId !== ''">
-                        <el-form :model="meetingBaseInfoForm"  status-icon class="demo-ruleForm" label-width="25%" label-position="right" @submit.native.prevent>
+                        <el-form :model="meetingBaseInfoForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right" @submit.native.prevent>
                             <el-row class="el-row-h70">
-                                <el-col :span="18">
+                                <el-col :span="24">
                                     <el-form-item label="关联会议名称" style="margin:0;">
                                         <el-input
                                         disabled
@@ -166,9 +165,9 @@
                                 </el-col>
                             </el-row>
                             <el-row class="el-row-h70">
-                                <el-col :span="18">
+                                <el-col :span="24">
                                     <el-form-item label="会议起止时间" style="margin:0;">
-                                        <el-col :span="10">
+                                        <el-col :span="11">
                                             <el-input
                                             disabled
                                             type="text"
@@ -176,7 +175,7 @@
                                             auto-complete="on">
                                             </el-input>
                                         </el-col>
-                                        <el-col :span="10" :offset="1">
+                                        <el-col :span="11" :offset="2">
                                             <el-input
                                             disabled
                                             type="text"
@@ -188,9 +187,9 @@
                                 </el-col>
                             </el-row>
                             <el-row class="el-row-h70">
-                                <el-col :span="18">
+                                <el-col :span="24">
                                     <el-form-item label="报名起止时间" style="margin:0;">
-                                        <el-col :span="10">
+                                        <el-col :span="11">
                                             <el-input
                                             disabled
                                             type="text"
@@ -198,7 +197,7 @@
                                             auto-complete="on">
                                             </el-input>
                                         </el-col>
-                                        <el-col :span="10" :offset="1">
+                                        <el-col :span="11" :offset="2">
                                             <el-input
                                             type="text"
                                             disabled
@@ -210,9 +209,9 @@
                                 </el-col>
                             </el-row>
                             <el-row class="el-row-h70">
-                                <el-col :span="18">
+                                <el-col :span="24">
                                     <el-form-item label="所在区域" style="margin:0;">
-                                        <el-col :span="6">
+                                        <el-col :span="7">
                                             <el-input
                                             disabled
                                             type="text"
@@ -220,7 +219,7 @@
                                             auto-complete="on">
                                             </el-input>
                                         </el-col>
-                                        <el-col :span="6" :offset="1">
+                                        <el-col :span="7" :offset="2">
                                             <el-input
                                             type="text"
                                             disabled
@@ -228,7 +227,7 @@
                                             auto-complete="on">
                                             </el-input>
                                         </el-col>
-                                        <el-col :span="6" :offset="1">
+                                        <el-col :span="7" :offset="1">
                                             <el-input
                                             type="text"
                                             disabled
@@ -240,7 +239,7 @@
                                 </el-col>
                             </el-row>
                             <el-row class="el-row-h70">
-                                <el-col :span="18">
+                                <el-col :span="24">
                                     <el-form-item label="详细地址" style="margin:0;">
                                         <el-input
                                         disabled
@@ -257,7 +256,7 @@
 
                     <div class="sparate_line">属性设置</div>
                     <el-row class="el-row-h70">
-                        <el-col :span="18">
+                        <el-col :span="24">
                             <el-form-item label="是否使用邀请码" prop="signUpInvitationCode" style="margin:0;">
                                 <template slot-scope="scope">
                                     <el-radio v-model="signupForm.signUpInvitationCode" label="0">使用</el-radio>
@@ -267,8 +266,8 @@
                         </el-col>
                     </el-row>
                     <el-row class="el-row-h70">
-                        <el-col :span="18">
-                            <el-form-item label="是否审核" prop="signUpExamine" style="margin:0;">
+                        <el-col :span="24">
+                            <el-form-item label="是否审核" prop="signUpExamine" style="margin:0">
                                 <template slot-scope="scope">
                                     <el-radio v-model="signupForm.signUpExamine" label="0">需要审核</el-radio>
                                     <el-radio v-model="signupForm.signUpExamine" label="1">报名即通过</el-radio>
@@ -277,7 +276,7 @@
                         </el-col>
                     </el-row>
                     <el-row class="el-row-h70">
-                        <el-col :span="18">
+                        <el-col :span="24">
                             <el-form-item label="是否需要签到" prop="signUpIsToCheck" style="margin:0;">
                                 <template slot-scope="scope">
                                     <el-radio v-model="signupForm.signUpIsToCheck" label="0">使用</el-radio>
@@ -290,7 +289,7 @@
                     <div v-if="signupForm.signUpIsToCheck == '0'">
                         <div class="el-row-h70" v-for="(value, index) in checkinTime">
                             <el-row class="el-row-h40">
-                                <el-col :span="10">
+                                <el-col :span="10" >
                                     <el-form-item label="设置签到日期" label-width="36%" prop="signUpDate">
                                         <el-date-picker
                                         v-model="checkinTime[index]"
@@ -358,13 +357,13 @@
                    <el-row v-if="signupForm.signUpCustom" class="el-row-h70" style="margin-top: 40px">
                         <div v-for="(item,index) in signupForm.signUpJson">
                             <div v-if="item.sectionStatus == '1'">
-                                <el-row class="el-row-h70">
-                                    <el-col :span="18">
+                                <el-row class="el-row-h70" style="margin-top: 50px">
+                                    <el-col :span="24">
                                         <el-form-item label="自定义标题" style="margin:0;">
                                             <el-input
                                                 clearable
                                                 type="text"
-                                                maxlength = "36"
+                                                maxlength="36"
                                                 v-model="item.sectionTitle"
                                                 placeholder="请输入选项标题"
                                                 auto-complete="on">
@@ -374,7 +373,7 @@
                                     </el-col>
                                 </el-row>
                                 <el-row class="el-row-h70">
-                                    <el-col :span="18">
+                                    <el-col :span="24">
                                         <el-form-item label="最大选项值" style="margin:0;">
                                             <el-input
                                                 clearable
@@ -390,7 +389,7 @@
                                     <div v-if="item2.itemStatus == '1'">
                                         <el-row class="el-row-h40" style="margin-bottom: 20px;">
                                             <el-col :span="18">
-                                                <el-form-item label="选项" style="margin:0;">
+                                                <el-form-item label="选项" label-width="20%" style="margin:0;">
                                                     <el-input
                                                         clearable
                                                         maxlength = "36"
@@ -401,7 +400,7 @@
                                                     </el-input>
                                                 </el-form-item>
                                             </el-col>
-                                            <el-col :span="5" :offset="1">
+                                            <el-col :span="4" :offset="2">
                                                 <template>
                                                     <el-radio v-model="item2.ifShow" :label = false>不显示</el-radio>
                                                     <el-radio v-model="item2.ifShow" :label = true>显示</el-radio>
@@ -410,7 +409,7 @@
                                         </el-row>
                                     </div>
                                 </div>
-                            <el-row class="el-row-h70">
+                            <el-row class="el-row-h50">
                                 <el-col :span="1" :offset="4" style="margin-top: 0px">
                                     <el-button size="medium" type="primary" icon="el-icon-plus" @click="addSpecialOptions(index)" circle ></el-button>
                                 </el-col>
@@ -698,7 +697,19 @@
                         </el-col>
                     </el-row>
                     <div v-if="searchDetailForm.signUpIsToCheck == '0'">
-                        <el-row class="el-row-60"> 
+                        <div class="signin_time">
+                            <h1 class="paperitem_title">签到记录</h1>
+                            <ul>
+                                <li class="clearfix"
+                                    :class="{'active':item.ifSignIn}"
+                                    v-for="(item,index) in signInTimeList">
+                                    <span class="time" v-text="item.timeText"></span>
+                                    <span class="status" v-if="item.ifSignIn">已签到</span>
+                                    <span class="status" v-if="!(item.ifSignIn)">未签到</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- <el-row class="el-row-60"> 
                             <el-col :span="6">
                                 <el-form-item label-width="30%" label="签到记录:" style="margin:0;"></el-form-item>
                             </el-col>
@@ -714,13 +725,13 @@
                                     auto-complete="off"></el-input>
                                 </el-col>
                             </el-row> 
-                        </div>
+                        </div> -->
                     </div>
                    
-                    <div style="margin-top: 40px" v-for="(item, index) in searchDetailForm.signUpJson">
+                    <div style="margin-top: 40px" v-for="(item, index) in showAllBaseInfo">
                         <div v-if="item.sectionStatus == '1'">
                             <el-row class="el-row-60" style="margin-bottom: 10px;">
-                                <el-col :span="18">
+                                <el-col :span="24">
                                     <el-form-item label-width="20%" label="自定义标题" style="margin:0;">
                                         <el-input
                                         clearable
@@ -732,7 +743,7 @@
                                 </el-col>
                             </el-row>
                             <el-row class="el-row-60" style="margin-bottom: 10px;">
-                                <el-col :span="18" :offset="2">
+                                <el-col :span="22" :offset="2">
                                     <el-form-item label-width="20%" label="选项设置" style="margin:0;">
                                         <el-input
                                         clearable
@@ -746,7 +757,7 @@
                             <div v-for="(item2, index2) in item.itemList">
                                 <div v-if="item2.itemStatus == '1'">
                                     <el-row class="el-row-h40">
-                                        <el-col :span="1" :offset="4">
+                                        <el-col :span="1" :offset="5">
                                             <template>
                                                 <el-checkbox v-model="item2.ifChoose"></el-checkbox>
                                             </template>
@@ -767,10 +778,9 @@
                                         </el-col>
                                         <el-col :span="2" :offset="1">
                                             <el-form-item>
-                                                 <div v-if="item2.ifShow = false">
+                                                 <div class="warning_color" v-if="item2.ifShow == false">
                                                     页面不显示
                                                 </div>
-                                              
                                             </el-form-item>
                                         </el-col>
                                     </el-row>
@@ -809,7 +819,6 @@
                             <el-form-item  label-width="30%" label="名称" style="margin:0;">
                                 <el-input
                                 clearable
-                                placeholder="请输入名称"
                                 type="text"
                                 v-model="searchCodeForm.meetingInvitationCodeName"
                                 auto-complete="off"></el-input>
@@ -997,12 +1006,12 @@ background:rgb(248, 248, 248)!important;
 .sparate_line {
     display: block;
     margin:40px auto;
-    width: 900px;
-    height:40px;
-    line-height: 40px;
+    width: 100%;
+    height:70px;
+    line-height: 70px;
     font-size: 20px;
     font-weight: 600;
-    color: #7f7f7f;
+    color: #2268F5;
     text-align: center;
     border-bottom: 1px dotted #7f7f7f;
 }
@@ -1013,6 +1022,53 @@ background:rgb(248, 248, 248)!important;
 }
 .option_line:last-child {
     border-bottom: none;
+}
+.warning_color {
+    color: red;
+}
+
+/* 签到时间 */
+.signin_time{
+    padding: 0.3rem 6%;
+}
+.signin_time ul{
+    display: block;
+}
+.signin_time ul.itemcenter li{
+    text-align: center;
+}
+.signin_time ul li{
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 0.9rem;
+    line-height: 0.9rem;
+    padding: 0 3.5%;
+    margin-bottom: 0.25rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+    border-radius: 2px;
+    border:1px solid rgba(232,232,232,1);
+}
+.signin_time ul li.active{
+    background: #DFEEFF;
+    border:none;
+}
+.signin_time ul li .time{
+    float: left;
+    display: block;
+    width: 80%;
+    height: 0.9rem;
+    line-height: 0.9rem;
+}
+.signin_time ul li .status{
+    float: right;
+    display: block;
+    width: 20%;
+    height: 0.9rem;
+    line-height: 0.9rem;
+    text-align: center;
 }
 </style>
 </html>
