--- a/webapps/ROOT/WEB-INF/classes/templates/modules/signup/signup_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/signup/signup_list.html
@@ -772,7 +772,7 @@
                                         </el-col>
                                         <el-col :span="2" :offset="1">
                                             <el-form-item>
-                                                 <div v-if="item2.ifShow == false">
+                                                 <div class="warning_color" v-if="item2.ifShow == false">
                                                     页面不显示
                                                 </div>
                                             </el-form-item>
